--- a/package.xml
+++ b/package.xml
@@ -5555,6 +5555,7 @@
         <members>Expense.TransactionDate</members>
         <members>Expense.WorkOrderId</members>
         <members>Feb24obj1__c.f1__c</members>
+        <members>Feb25Obj1__c.F1__c</members>
         <members>Feb26Obj123__c.F1__c</members>
         <members>ForecastingAdjustment.ProductFamily</members>
         <members>ForecastingOwnerAdjustment.ProductFamily</members>
@@ -6751,6 +6752,7 @@
         <members>ExpressionFilterCriteria</members>
         <members>ExternalEventMapping</members>
         <members>Feb24obj1__c</members>
+        <members>Feb25Obj1__c</members>
         <members>Feb26Obj123__c</members>
         <members>FeedItem</members>
         <members>ForecastingAdjustment</members>
