Retest Rel Label1

--- a/package.xml
+++ b/package.xml
@@ -128,7 +128,14 @@
         <members>AccnTest5</members>
         <members>Account8</members>
         <members>ActnrClass2</members>
-        <members>AddClass2</members>
+        <members>Actnrclass1</members>
+        <members>ActrClass1</members>
+        <members>ApexclassSixteenth</members>
+        <members>Apicls2</members>
+        <members>Ar100</members>
+        <members>Asca1</members>
+        <members>Asca2</members>
+        <members>Asl1</members>
         <members>Aug21stClass1</members>
         <members>Aug21stClass2</members>
         <members>Aug21stClass3</members>
