--- a/package.xml
+++ b/package.xml
@@ -26,6 +26,7 @@
         <members>A32</members>
         <members>AAClsBugKIxIjEo</members>
         <members>AAClsLrXAGxzJkvTRq</members>
+        <members>AAClsYyLIMoPfkbf</members>
         <members>Pavancls1</members>
         <members>Pavancls3</members>
         <members>Pavancls4</members>
