[ DXTES-32 - Sai Story ]

--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
         <members>A0</members>
         <members>A000</members>
         <members>A0001</members>
+        <members>A0071</members>
         <members>A0123</members>
         <members>A01234567</members>
         <members>A0123678</members>
