--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,7 @@
         <members>A30</members>
         <members>A32</members>
         <members>AAClsBugKIxIjEo</members>
+        <members>AAClsHPbVHRKsF</members>
         <members>AAClsLrXAGxzJkvTRq</members>
         <members>AAClsWLSxyNNBvTL</members>
         <members>AAClsYjcWdkgrHn</members>
