--- a/package.xml
+++ b/package.xml
@@ -29,6 +29,7 @@
         <members>AAClsLrXAGxzJkvTRq</members>
         <members>AAClsWLSxyNNBvTL</members>
         <members>AAClsYjcWdkgrHn</members>
+        <members>AAClseMucBqv</members>
         <members>Pavancls1</members>
         <members>Pavancls3</members>
         <members>Pavancls4</members>
