--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>49.0</version>
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -145,6 +145,7 @@
         <members>BusinessClass</members>
         <members>BusinessClassTest</members>
         <members>C1</members>
+        <members>Casehelper</members>
         <members>ChangePasswordController</members>
         <members>ChangePasswordControllerTest</members>
         <members>CommunitiesLandingController</members>
@@ -390,6 +391,8 @@
     </types>
     <types>
         <members>Default_Catch up</members>
+        <members>Default_New1</members>
+        <members>Default_TestCommunity</members>
         <name>Audience</name>
     </types>
     <types>
@@ -469,15 +472,6 @@
         <name>CustomApplication</name>
     </types>
     <types>
-        <members>ACCObjTest1__c.ACCField1__c</members>
-        <members>ACCObjTest1__c.ACCField2__c</members>
-        <members>ACCObjTest1__c.AutorabitExtId__c</members>
-        <members>ACCObjTest1__c.N1__c</members>
-        <members>ACCObjTest1__c.PLNew1__c</members>
-        <members>ACCObjTest1__c.PLnew3__c</members>
-        <members>ACCObjTest1__c.PLt1__c</members>
-        <members>ACCObjTest1__c.Plt3__c</members>
-        <members>ACCObjTest1__c.pl1__c</members>
         <members>ACCObjt1__c.FT1__c</members>
         <members>ACCObjt1__c.FT2__c</members>
         <members>ACCObjt1__c.FT5__c</members>
@@ -2521,7 +2515,6 @@
         <members>A2__c</members>
         <members>A3__c</members>
         <members>A4s__c</members>
-        <members>ACCObjTest1__c</members>
         <members>ACCObjt1__c</members>
         <members>ACDemoOBj1__c</members>
         <members>ACObj12__c</members>
@@ -3151,10 +3144,6 @@
         <members>QuoteLineItem</members>
         <members>TestFlowLabel1</members>
         <name>Flow</name>
-    </types>
-    <types>
-        <members>TestFlowcat1</members>
-        <name>FlowCategory</name>
     </types>
     <types>
         <members>TestFlowLabel1</members>
@@ -3841,8 +3830,6 @@
         <name>RecordActionDeployment</name>
     </types>
     <types>
-        <members>ACCObjTest1__c.SairecordType1</members>
-        <members>ACCObjTest1__c.SairecordType2</members>
         <members>Account.ARC1</members>
         <members>Contact.CRT1</members>
         <members>DLCObj18__c.DLCObj18_RcType1</members>
