--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -130,6 +129,7 @@
         <members>Account8</members>
         <members>ActnrClass2</members>
         <members>AddClass2</members>
+        <members>ApexclassSixteenth</members>
         <members>Apicls2</members>
         <members>Asca1</members>
         <members>Asca2</members>
@@ -143,6 +143,7 @@
         <members>BusinessClass</members>
         <members>BusinessClassTest</members>
         <members>C1</members>
+        <members>Casehelper</members>
         <members>ChangePasswordController</members>
         <members>ChangePasswordControllerTest</members>
         <members>CommunitiesLandingController</members>
@@ -340,6 +341,7 @@
         <members>AccountTrigger1</members>
         <members>ContactTrigger1</members>
         <members>Leadtrigger1</members>
+        <members>SaiTrigger</members>
         <name>ApexTrigger</name>
     </types>
     <types>
