--- a/package.xml
+++ b/package.xml
@@ -148,6 +148,15 @@
         <members>Casehelper</members>
         <members>ChangePasswordController</members>
         <members>ChangePasswordControllerTest</members>
+        <members>ClasspiCULT</members>
+        <members>ClasspmgxMtXxQFZom</members>
+        <members>ClasspsCTN</members>
+        <members>ClassqMgXipam</members>
+        <members>ClassqSRV</members>
+        <members>ClassqWgen</members>
+        <members>ClassqWm</members>
+        <members>ClassqcvlxImF</members>
+        <members>ClassqwCHxASH</members>
         <members>CommunitiesLandingController</members>
         <members>CommunitiesLandingControllerTest</members>
         <members>CommunitiesLoginController</members>
