--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -3000,6 +2999,7 @@
         <members>System AdministratorClone</members>
         <members>Test1</members>
         <members>Test1Profile</members>
+        <members>Test1Profile2</members>
         <members>TestCommunity Profile</members>
         <members>TestCreateProfile</members>
         <members>TestSite1 Profile</members>
