--- a/package.xml
+++ b/package.xml
@@ -1387,6 +1387,8 @@
         <members>MaintenancePlan.WorkTypeId</members>
         <members>Mar1811__c.f1__c</members>
         <members>Mar1811__c.f2__c</members>
+        <members>Mar19SaiObj1__c.F1__c</members>
+        <members>Mar19SaiObj1__c.F2__c</members>
         <members>Mar20Obj2__c.Mar20Obj2Field1__c</members>
         <members>Mar20Obj2__c.Mar20Obj2Field2__c</members>
         <members>Mar20Obj3__c.Mar20Obj3Field1__c</members>
@@ -2665,6 +2667,7 @@
         <members>MaintenanceAsset</members>
         <members>MaintenancePlan</members>
         <members>Mar1811__c</members>
+        <members>Mar19SaiObj1__c</members>
         <members>Mar20Obj2__c</members>
         <members>Mar20Obj3__c</members>
         <members>Mar21Obj2__c</members>
