--- a/package.xml
+++ b/package.xml
@@ -2729,5 +2729,9 @@
         <members>ACCObjt1__c.QuoteLineItem</members>
         <members>Opportunity.test eork flow1</members>
         <name>WorkflowRule</name>
+    </types>    
+     <types>
+        <members>Test_Territory_Model.Test_Territory_Rule1</members>
+        <name>Territory2Rule</name>
     </types>
 </Package>
