--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>45.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
     <types>
         <members>A0</members>
+        <members>A000</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
@@ -20,6 +20,7 @@
         <members>A194</members>
         <members>A30</members>
         <members>A32</members>
+        <members>sai007</members>
         <name>ApexClass</name>
     </types>
     <types>
@@ -57,6 +58,11 @@
         <members>DLObj1__c</members>
         <members>DObj2__c</members>
         <name>CustomObject</name>
+    </types>
+    <types>
+        <members>DLCObj18__c.All</members>
+        <members>DLObj1__c.All</members>
+        <name>ListView</name>
     </types>
     <types>
         <members>PRS1</members>
