--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,7 @@
         <members>A000</members>
         <members>A0001</members>
         <members>A0071</members>
+        <members>A00711</members>
         <members>A0123</members>
         <members>A01234</members>
         <members>A01234567</members>
