--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>51.0</version>
     <types>
+        <members>A000</members>
         <members>A00000LgKTWXnk</members>
         <members>A0001</members>
         <members>A0071</members>
