--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,7 @@
         <members>A00000ABdkKerh</members>
         <members>A00000AOZGddBpOrC</members>
         <members>A00000AVKjXfklBUCb</members>
+        <members>A1</members>
         <name>ApexClass</name>
     </types>
 </Package>
