--- a/package.xml
+++ b/package.xml
@@ -460,6 +460,7 @@
         <name>CustomApplication</name>
     </types>
     <types>
+        <members>A1__c.F1__c</members>
         <members>ACCObjTest1__c.ACCField1__c</members>
         <members>ACCObjTest1__c.ACCField2__c</members>
         <members>ACCObjTest1__c.Apr6thpicklist1__c</members>
@@ -1926,6 +1927,7 @@
         <name>CustomLabel</name>
     </types>
     <types>
+        <members>A1__c</members>
         <members>ACCObjTest1__c</members>
         <members>ACCObjt1__c</members>
         <members>ACDemoOBj1__c</members>
