--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
         <members>A028</members>
         <members>A08089</members>
         <members>A081</members>
+        <members>A08123</members>
         <members>A10</members>
         <members>A12</members>
         <members>A13</members>
@@ -46,6 +47,7 @@
         <name>CustomField</name>
     </types>
     <types>
+        <members>ACL25</members>
         <members>CustomLabelTest2</members>
         <members>CustomlabelSB3</members>
         <members>DL1</members>
