--- a/package.xml
+++ b/package.xml
@@ -76,6 +76,8 @@
         <members>ACL12</members>
         <members>ACL24</members>
         <members>ACL25</members>
+        <members>APXL1</members>
+        <members>APXL2</members>
         <members>CustomLabelTest2</members>
         <members>CustomlabelSB3</members>
         <members>DL1</members>
