--- a/package.xml
+++ b/package.xml
@@ -70,6 +70,7 @@
         <name>AuraDefinitionBundle</name>
     </types>
     <types>
+        <members>A1__c.F1__c</members>
         <members>ACDemoOBj1__c.Ftest12__c</members>
         <members>DLCObj18__c.Field1__c</members>
         <members>DLCObj18__c.Field2__c</members>
