--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,7 @@
         <members>A0123</members>
         <members>A01234</members>
         <members>A01234567</members>
+        <members>A025</members>
         <members>A027</members>
         <members>A028</members>
         <members>A08089</members>
