--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
         <members>A028</members>
         <members>A08089</members>
         <members>A081</members>
+        <members>A090</members>
         <members>A10</members>
         <members>A12</members>
         <members>A13</members>
