--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -434,7 +434,12 @@
         <name>ApexPage</name>
     </types>
     <types>
+        <members>Account</members>
+        <members>AccountAddressTrigger</members>
         <members>AccountTrigger1</members>
+        <members>Backify__updateVersion</members>
+        <members>Branch_CodeUpdate</members>
+        <members>Branch_Code_Update</members>
         <members>ContactTrigger1</members>
         <members>Leadtrigger1</members>
         <name>ApexTrigger</name>
@@ -468,6 +473,8 @@
     <types>
         <members>ACOBJTpagecomponent</members>
         <members>ARIndexCmp</members>
+        <members>AR_DX</members>
+        <members>AccountList</members>
         <members>Ar2</members>
         <members>AuraComponent5</members>
         <members>Aura_Bundle_Test1</members>
@@ -476,6 +483,9 @@
         <members>Auracomponent4</members>
         <members>AutoComponenent2</members>
         <members>AutoComponenet1</members>
+        <members>Buttton</members>
+        <members>Component</members>
+        <members>ContactDetails</members>
         <members>LCTest1</members>
         <members>LwcTest1</members>
         <members>Lwctest</members>
@@ -543,6 +553,7 @@
         <name>CustomFeedFilter</name>
     </types>
     <types>
+        <members>A1__c.F1__c</members>
         <members>ACCObjTest1__c.ACCField1__c</members>
         <members>ACCObjTest1__c.ACCField2__c</members>
         <members>ACCObjTest1__c.Apr6thpicklist1__c</members>
@@ -624,6 +635,7 @@
         <members>Aug29_Obj1__c.Field1__c</members>
         <members>Bj1__c.Field1__c</members>
         <members>CAcobj1__c.CACField1s__c</members>
+        <members>Case.ServiceContractId</members>
         <members>CustomMetadataType_Test1__mdt.Field1_Test1__c</members>
         <members>DBObj11__c.Field1__c</members>
         <members>DBObj1__c.Field1__c</members>
@@ -903,6 +915,7 @@
     <types>
         <members>AAtest456</members>
         <members>AC1</members>
+        <members>AC100</members>
         <members>AC11</members>
         <members>AC133</members>
         <members>AC2</members>
@@ -1172,7 +1185,6 @@
         <name>CustomLabel</name>
     </types>
     <types>
-        <members>A1__c</members>
         <members>A2__c</members>
         <members>A3__c</members>
         <members>A4s__c</members>
@@ -1976,6 +1988,7 @@
         <members>TestCommunity Profile</members>
         <members>TestCreateProfile</members>
         <members>TestSite1 Profile</members>
+        <members>Testprofile2</members>
         <members>Work%2Ecom Only User</members>
         <members>clone profile</members>
         <members>profilestandared</members>
