--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -2930,6 +2930,7 @@
         <members>TestCreateProfile</members>
         <members>TestSite1 Profile</members>
         <members>Teste Profile</members>
+        <members>Testprofile2</members>
         <members>Work%2Ecom Only User</members>
         <members>clone profile</members>
         <members>sp1</members>
