--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>48.0</version>
     <types>
         <members>A0</members>
@@ -188,6 +187,7 @@
         <members>Kl1</members>
         <members>LBClass1</members>
         <members>LBClass2</members>
+        <members>LightningSelfRegisterControllerTest</members>
         <members>Mar16saiclass4</members>
         <members>Mar19Cls3</members>
         <members>Mar20Class3</members>
@@ -202,6 +202,7 @@
         <members>NS25Class1</members>
         <members>New1233</members>
         <members>NewSep62</members>
+        <members>PartnerAccess</members>
         <members>Pavancls1</members>
         <members>Pavancls3</members>
         <members>Pavancls4</members>
@@ -2108,6 +2109,10 @@
         <members>unfiled$public/SupportSelfServiceNewLoginandPassword</members>
         <members>unfiled$public/SupportSelfServiceResetPassword</members>
         <name>EmailTemplate</name>
+    </types>
+    <types>
+        <members>BigHack__b.BHIndex</members>
+        <name>Index</name>
     </types>
     <types>
         <members>addNewShares</members>
