--- a/package.xml
+++ b/package.xml
@@ -3250,6 +3250,7 @@
         <members>Case-Case %28Sales%29 Layout</members>
         <members>Case-Case %28Support%29 Layout</members>
         <members>Case-Case Layout</members>
+        <members>Case29997__c-Case29997 Layout</members>
         <members>CaseClose-Close Case Layout</members>
         <members>CommunityMemberLayout-Community Member Layout</members>
         <members>ConfigObj1__c-ConfigObj1 Layout</members>
@@ -4416,6 +4417,8 @@
         <members>AR_Obj1__c.ARSValidationRule1</members>
         <members>AR_Obj1__c.ARSValidationRule3</members>
         <members>AR_Obj1__c.ARpValidationRule4</members>
+        <members>Case.SampleValid1</members>
+        <members>Case.SampleValid2</members>
         <members>EC_AccObj1__c.ECVRule1</members>
         <members>Lead.LeadValidationRule1</members>
         <members>Lead.LeadValidationRule2</members>
