--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -815,6 +815,7 @@
         <members>CardPaymentMethod.Status</members>
         <members>Case.AccountId</members>
         <members>Case.AssetId</members>
+        <members>Case.AutorabitExtId__c</members>
         <members>Case.BusinessHoursId</members>
         <members>Case.ClosedDate</members>
         <members>Case.Comments</members>
@@ -824,13 +825,17 @@
         <members>Case.ContactMobile</members>
         <members>Case.ContactPhone</members>
         <members>Case.Description</members>
+        <members>Case.EngineeringReqNumber__c</members>
         <members>Case.IsClosedOnCreate</members>
         <members>Case.IsEscalated</members>
         <members>Case.Origin</members>
         <members>Case.OwnerId</members>
         <members>Case.ParentId</members>
+        <members>Case.PotentialLiability__c</members>
         <members>Case.Priority</members>
+        <members>Case.Product__c</members>
         <members>Case.Reason</members>
+        <members>Case.SLAViolation__c</members>
         <members>Case.Status</members>
         <members>Case.Subject</members>
         <members>Case.SuppliedCompany</members>
@@ -3508,6 +3513,10 @@
         <members>BuyerGroup.All_Buyer_Groups</members>
         <members>BuyerGroup.My_Buyer_Groups</members>
         <members>CardPaymentMethod.CardPaymentMethod</members>
+        <members>Case.AllClosedCases</members>
+        <members>Case.AllOpenCases</members>
+        <members>Case.MyCases</members>
+        <members>Case.MyOpenCases</members>
         <members>ChannelProgram.All_Channel_Programs</members>
         <members>ChannelProgram.My_Channel_Programs</members>
         <members>ChannelProgramLevel.All_Channel_Program_Levels</members>
@@ -4420,6 +4429,7 @@
     </types>
     <types>
         <members>Campaign.ViewCampaignInfluenceReport</members>
+        <members>Case.UpsellCrosssellOpportunity</members>
         <name>WebLink</name>
     </types>
     <types>
