--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
         <members>A0001</members>
+        <members>A0009</members>
         <members>A0071</members>
+        <members>A009</members>
         <members>A0123</members>
+        <members>A01234567</members>
+        <members>A0123678</members>
+        <members>A0233</members>
+        <members>A025</members>
         <members>A027</members>
         <members>A028</members>
+        <members>A036</members>
         <members>A08089</members>
         <members>A081</members>
         <members>A08123</members>
@@ -21,6 +28,7 @@
         <members>A194</members>
         <members>A30</members>
         <members>A32</members>
+        <members>E3</members>
         <members>sai007</members>
         <name>ApexClass</name>
     </types>
@@ -32,8 +40,52 @@
         <name>ApexPage</name>
     </types>
     <types>
+        <members>AccountTrigger1</members>
+        <members>ContactTrigger1</members>
+        <members>Leadtrigger1</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>Case.Standard</members>
+        <name>AssignmentRule</name>
+    </types>
+    <types>
+        <members>Case</members>
+        <name>AssignmentRules</name>
+    </types>
+    <types>
         <members>A1__c.F1__c</members>
         <members>ACDemoOBj1__c.Ftest12__c</members>
+        <members>Case.AccountId</members>
+        <members>Case.AssetId</members>
+        <members>Case.AutorabitExtId__c</members>
+        <members>Case.BusinessHoursId</members>
+        <members>Case.ClosedDate</members>
+        <members>Case.Comments</members>
+        <members>Case.ContactEmail</members>
+        <members>Case.ContactFax</members>
+        <members>Case.ContactId</members>
+        <members>Case.ContactMobile</members>
+        <members>Case.ContactPhone</members>
+        <members>Case.Description</members>
+        <members>Case.EngineeringReqNumber__c</members>
+        <members>Case.IsClosedOnCreate</members>
+        <members>Case.IsEscalated</members>
+        <members>Case.Origin</members>
+        <members>Case.OwnerId</members>
+        <members>Case.ParentId</members>
+        <members>Case.PotentialLiability__c</members>
+        <members>Case.Priority</members>
+        <members>Case.Product__c</members>
+        <members>Case.Reason</members>
+        <members>Case.SLAViolation__c</members>
+        <members>Case.Status</members>
+        <members>Case.Subject</members>
+        <members>Case.SuppliedCompany</members>
+        <members>Case.SuppliedEmail</members>
+        <members>Case.SuppliedName</members>
+        <members>Case.SuppliedPhone</members>
+        <members>Case.Type</members>
         <members>DLCObj18__c.Field1__c</members>
         <members>DLCObj18__c.Field2__c</members>
         <members>DLCObj18__c.Field5__c</members>
@@ -45,6 +97,10 @@
         <members>DObj2__c.Field3__c</members>
         <members>DObj2__c.field1__c</members>
         <members>DObj2__c.field2__c</members>
+        <members>Dbj1__c.F1__c</members>
+        <members>Dbj1__c.F2__c</members>
+        <members>Obj900__c.Field1__c</members>
+        <members>Obj900__c.field2__c</members>
         <name>CustomField</name>
     </types>
     <types>
@@ -60,12 +116,23 @@
     <types>
         <members>A1__c</members>
         <members>ACDemoOBj1__c</members>
+        <members>Case</members>
         <members>DLCObj18__c</members>
         <members>DLObj1__c</members>
         <members>DObj2__c</members>
+        <members>Dbj1__c</members>
+        <members>Obj900__c</members>
         <name>CustomObject</name>
     </types>
     <types>
+        <members>CaseClose-Close Case Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
+        <members>Case.AllClosedCases</members>
+        <members>Case.AllOpenCases</members>
+        <members>Case.MyCases</members>
+        <members>Case.MyOpenCases</members>
         <members>DLCObj18__c.All</members>
         <members>DLObj1__c.All</members>
         <name>ListView</name>
@@ -131,5 +198,15 @@
         <members>Work%2Ecom Only User</members>
         <members>clone profile</members>
         <name>Profile</name>
+    </types>
+    <types>
+        <members>Dbj1__c.Dbj_RC1</members>
+        <members>Dbj1__c.Dbj_RC2</members>
+        <members>Obj900__c.Obj900RC1</members>
+        <name>RecordType</name>
+    </types>
+    <types>
+        <members>Case.UpsellCrosssellOpportunity</members>
+        <name>WebLink</name>
     </types>
 </Package>
