--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -8,8 +8,10 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>A1__c.F1__c</members>
         <members>ACR5__c.F3__c</members>
         <members>Dbj1__c.f2__c</members>
+        <members>SKVObj2__c.F1__c</members>
         <name>CustomField</name>
     </types>
     <types>
@@ -268,6 +270,11 @@
         <members>z901</members>
         <members>zl123</members>
         <name>CustomLabel</name>
+    </types>
+    <types>
+        <members>A1__c</members>
+        <members>SKVObj2__c</members>
+        <name>CustomObject</name>
     </types>
     <types>
         <members>Dbj1__c-en_US</members>
