--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,7 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AADmnDec</members>
         <members>A00000LgKTWXnk</members>
         <members>A00000SXaQxc</members>
         <members>A0001</members>
@@ -1416,6 +1417,7 @@
         <members>a7testclass</members>
         <members>a_saiclass</members>
         <members>abc</members>
+        <members>agf__ADM_Comment</members>
         <members>ambassadorVolunteerHelper</members>
         <members>ambassadorVolunteerHelper_Test</members>
         <members>analyticsadopt__Scheduletimebatch</members>
