--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>48.0</version>
+    <version>49.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -386,10 +386,12 @@
         <members>Case.CaseAssnRuleBenqBgztiCBd</members>
         <members>Case.CaseAssnRuleRFyXfPcs</members>
         <members>Case.Standard</members>
+        <members>Lead.Standard</members>
         <name>AssignmentRule</name>
     </types>
     <types>
         <members>Case</members>
+        <members>Lead</members>
         <name>AssignmentRules</name>
     </types>
     <types>
