--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>51.0</version>
+    <version>48.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -4426,6 +4426,7 @@
         <name>ValidationRule</name>
     </types>
     <types>
+        <members>Account.link1</members>
         <members>Campaign.ViewCampaignInfluenceReport</members>
         <name>WebLink</name>
     </types>
