--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>50.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>51.0</version>
     <types>
         <members>A0</members>
         <members>A000</members>
@@ -20,6 +19,7 @@
         <members>A0456</members>
         <members>A045678</members>
         <members>A052</members>
+        <members>A080</members>
         <members>A080123</members>
         <members>A080189</members>
         <members>A08023424</members>
@@ -246,10 +246,12 @@
         <members>a7testclass</members>
         <members>abc</members>
         <members>b0testclass</members>
+        <members>km1</members>
         <members>n1</members>
         <members>nc1</members>
         <members>pavancls2</members>
         <members>rtclass1</members>
+        <members>skvcls1</members>
         <members>tejaclass1</members>
         <members>u8</members>
         <members>u9</members>
@@ -1472,6 +1474,8 @@
         <members>AAtest456</members>
         <members>AC1</members>
         <members>AC100</members>
+        <members>ACCL1</members>
+        <members>ACCL3</members>
         <members>ACCt3</members>
         <members>ACL101</members>
         <members>ACL11</members>
@@ -2024,6 +2028,10 @@
         <name>Document</name>
     </types>
     <types>
+        <members>AppAnalytics</members>
+        <name>EinsteinAgentSettings</name>
+    </types>
+    <types>
         <members>Georgia_COBRA</members>
         <members>Georgia_COBRA/BCBSGa_COBRA_Setup_Paperwork</members>
         <members>Georgia_COBRA/Newly_Installed_Group_1</members>
@@ -2268,10 +2276,6 @@
         <members>ANA_Open_Enrollment_Reports/OE_Meetings_with_Orders_with_Order_Line</members>
         <members>ANA_Open_Enrollment_Reports/OE_Orders</members>
         <name>Report</name>
-    </types>
-    <types>
-        <members>AppAnalytics</members>
-        <name>Settings</name>
     </types>
     <types>
         <members>ND_USER</members>
