--- a/package.xml
+++ b/package.xml
@@ -3,6 +3,8 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000IskxiFxFKkOb</members>
+        <members>A00000qLpaZWxL</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
