--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,8 @@
         <members>A000</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
+        <members>A00000PhWPJin</members>
+        <members>A00000adhLnOHe</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
