--- a/package.xml
+++ b/package.xml
@@ -3,10 +3,12 @@
     <types>
         <members>A0</members>
         <members>A000</members>
+        <members>A00000AitkVHyQwuqA</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
         <members>A00000adhLnOHe</members>
+        <members>A00000edhNCCP</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
