--- a/package.xml
+++ b/package.xml
@@ -7,7 +7,9 @@
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
+        <members>A00000RJAoAC</members>
         <members>A00000adhLnOHe</members>
+        <members>A00000dUFMkBAFl</members>
         <members>A00000edhNCCP</members>
         <members>A0001</members>
         <members>A0071</members>
