--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,8 @@
         <members>A00000adhLnOHe</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000edhNCCP</members>
+        <members>A00000rmFBXizYYX</members>
+        <members>A00000vyBYbsdC</members>
         <members>A0001</members>
         <members>A0071</members>
         <members>A0123</members>
