--- a/package.xml
+++ b/package.xml
@@ -4,6 +4,8 @@
         <members>A0</members>
         <members>A000</members>
         <members>A00000AitkVHyQwuqA</members>
+        <members>A00000AucwLjV</members>
+        <members>A00000EKSKObCoPpbN</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
