--- a/package.xml
+++ b/package.xml
@@ -5,6 +5,7 @@
         <members>A000</members>
         <members>A00000AitkVHyQwuqA</members>
         <members>A00000AucwLjV</members>
+        <members>A00000CFxwey</members>
         <members>A00000EKSKObCoPpbN</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
@@ -13,6 +14,7 @@
         <members>A00000adhLnOHe</members>
         <members>A00000dUFMkBAFl</members>
         <members>A00000edhNCCP</members>
+        <members>A00000piZvEGK</members>
         <members>A00000rmFBXizYYX</members>
         <members>A00000vyBYbsdC</members>
         <members>A0001</members>
