--- a/package.xml
+++ b/package.xml
@@ -10,10 +10,12 @@
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
+        <members>A00000PyrzofjZOo</members>
         <members>A00000RJAoAC</members>
         <members>A00000YHyRIldVm</members>
         <members>A00000adhLnOHe</members>
         <members>A00000dUFMkBAFl</members>
+        <members>A00000dlgYfPJYOwHp</members>
         <members>A00000edhNCCP</members>
         <members>A00000iajWZAH</members>
         <members>A00000piZvEGK</members>
