--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
         <members>A00000AucwLjV</members>
         <members>A00000CFxwey</members>
         <members>A00000EKSKObCoPpbN</members>
+        <members>A00000HdtwagahTin</members>
         <members>A00000IBiFvDJw</members>
         <members>A00000JCAqwf</members>
         <members>A00000PhWPJin</members>
@@ -18,6 +19,7 @@
         <members>A00000dlgYfPJYOwHp</members>
         <members>A00000edhNCCP</members>
         <members>A00000iajWZAH</members>
+        <members>A00000iuBuQnJoiGe</members>
         <members>A00000piZvEGK</members>
         <members>A00000rmFBXizYYX</members>
         <members>A00000vyBYbsdC</members>
